--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#0a192f",
-  "background_color": "#0a192f"
+  "theme_color": "#000000",
+  "background_color": "#000000"
 } 
